Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/4980495/std/Static2NonStaticImportClash.out
Static2NonStaticImportClash.java:11:1: compiler.err.already.defined.single.import: p2.A2.f
1 error
